--- a/css/styles.css
+++ b/css/styles.css
@@ -182,8 +182,11 @@ background: rgb(255, 255, 255);
     justify-content: center; 
     align-items: center; 
     text-decoration: none;
-    color:white;
+    color:rgb(171, 171, 171);
     font-size:20px;
+    border: 2px solid rgb(187, 186, 186);
+    border-radius: 20px;
+    margin-bottom:20px;
 }
 .refresh-button:hover {
     color:red;
