--- a/css/display.css
+++ b/css/display.css
@@ -1,15 +1,20 @@
 #word1 {
     font-size: 200px;
-    top: 0;
-    left: 110px; 
+    top: -200;
+    left: 200px; 
     margin: 0px;
     color: #FFD700; /* Soft Yellow */
+    font-family: 'customIt';
+}
+@font-face {
+    font-family: 'customIt';
+    src: url("../_assets/Nexus.otf");
 }
 
 #word2 {
     font-size: 150px;
-    top: 200px;
-    left: 100px; 
+    top: 170px;
+    left: 150px; 
     margin: 0px;
     color: #FF69B4; /* Bright Pink */
 }
@@ -52,14 +57,7 @@
 }
 
 
-@keyframes scrollRight {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(100px); 
-    }
-}
+
 #word4 {
     font-size: 200px;
     top: 330px;
@@ -84,14 +82,7 @@
     animation: scrollLeft 1s linear infinite;
 }
 
-@keyframes scrollLeft {
-    0% {
-        transform: rotate(90deg) translateY(0); /* Keeps initial rotation */
-    }
-    100% {
-        transform: rotate(90deg) translateY(100px); /* Moves down without horizontal shift */
-    }
-}
+
 
 
 #display{
@@ -113,49 +104,4 @@
     text-align: center; /* Center the text horizontally */
     opacity: 0.8;      /* Optional: adjust opacity for better overlay effect */
     transition: all 0.3s; /* Smooth transition for hover effects, if needed */
-}
-.instagram-logo {
-    position:fixed;
-    top:0;
-    left:0;
-    width: 100px;
-    height: 100px;
-    background: linear-gradient(45deg, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
-    border-radius: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    border: 2px rgb(110, 108, 108) solid;
-}
-
-
-.instagram-logo .outer-circle {
-    width: 60%;
-    height: 60%;
-    background-color: white;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.instagram-logo .inner-circle {
-
-    width: 50%;
-    height: 50%;
-    background-color: #262626;
-    border-radius: 50%;
-}
-
-/* Camera flash dot */
-.instagram-logo::before {
-    content: '';
-    width: 15%;
-    height: 15%;
-    background-color: #262626;
-    border-radius: 50%;
-    position: absolute;
-    top: 20%;
-    right: 20%;
 }
