--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ img {
 }
 body{
     display:flex;
+    margin:0px;
 }
 
 .navBar{
@@ -47,6 +48,7 @@ height:100%;
     background:white;
     margin: 20px 0px;
     border:1px white solid;
+    border-radius: 15px 15px 15px 15px ;
 }
 .header{
     width:100%;
@@ -56,6 +58,7 @@ height:100%;
     display:flex;
     color:white;
     display: flex;
+    border-radius: 15px 15px 0px 0px ;
     
     align-items: center;
 }
@@ -70,18 +73,20 @@ height:100%;
     border: .5px white solid;
     color:white;
     display:flex;
+    border-radius: 0px 0px 15px 15px;
 }
 .likebutton{
-    margin:5px;
+    margin:15px;
     color:red;
-    height:50px;
+    height:40px;
     width:50px;
     font-size: xx-large;
-    border: 1px white solid;
+    background-color: rgba(255, 255, 255, 0.2);
     border-radius: 20%;;
     display:flex;
     justify-content:center;
     align-items: center;
+    padding-bottom:10px;
 }
 .footer:hover .heart {
     color: red; /* Ensure you have the correct HTML structure for this */
@@ -106,7 +111,7 @@ background: rgb(255, 255, 255);
     font-size: xx-large
 }
 .author{
-    margin-top:10px;
+    margin-top:15px;
     margin-left: 20px;
     width:65%;
     font-size: xx-large;
@@ -260,3 +265,26 @@ background: rgb(255, 255, 255);
 
     margin-right:5px;
 }
+
+.logo {
+    font-size: 50px;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 20px;
+    -webkit-text-stroke: 2px black;
+  }
+  .logoOut {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(45deg, rgb(255, 170, 255), rgb(244, 255, 142), rgba(0, 191, 255, 1));
+    border-radius: 20px; 
+    border: 1px solid rgb(0, 0, 0);
+  }
