--- a/css/exp.css
+++ b/css/exp.css
@@ -3,42 +3,45 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    background-color: lightgray;
+    color:white;
+   
 }
 
 #box4 {
     position:relative;
-    background: lightgray;
-    border: 5px solid #00F6EA;
+
     height:40%;
     position:absolute;
     width:55%;
     bottom:0px;
     right:0px;
     z-index:2;
+    color:white;
 }
 
 #box3 {
     position:relative;
-    background: lightgray;
-    border: 5px solid #00F6EA;
+
     margin-right:40%;
-    height:40%;
-    width:60%;
+    height:30%;
+    width:100%;
     z-index:2;
+    color:white;
 }
 
 .text1, .text2, .text3, .text4, .text5, .text6, .text7,.text8,.text9 {
     position: absolute;
     font-family: serif;
-    color: black;
+    color:white;
 }
 
 /* Adjusted font sizes and positions to fit within 395x200px container */
 .text1 {
     font-size: 24px;
-    top: 10px;
-    left: 10px;
+    top: 7px;
+    left: 240px;
+    color: #00F6EA;
+    
 }
 
 .text2 {
@@ -67,8 +70,11 @@
 
 .text6 {
     font-size: 24px;
-    top: 150px;
-    left: 10px;
+    top: 135px;
+    left: 70px;
+    color: #FFCEF5;
+    transform: rotate(80deg);
+
 }
 
 .text7 {
@@ -78,13 +84,53 @@
 }
 .text8 {
     font-size: 20px;
-    top: 150px;
-    left: 400px;
+    top: 90px;
+    left: 435px;
+    color: #f6ffa6;
+    transform: rotate(70deg);
+
 }
+
+
+.text8 span {
+    position: absolute;
+    transform-origin: bottom center;
+}
+
+.text8 span:nth-child(1) { 
+    transform: rotate(-35deg);
+    left: 0px;
+    top: 5px;
+}
+.text8 span:nth-child(2) { 
+    transform: rotate(-15deg); 
+    left: 20px;
+    top: 8px;
+}
+.text8 span:nth-child(3) { 
+    transform: rotate(0deg);
+    left: 35px;
+    top: 2px;
+}
+.text8 span:nth-child(4) { 
+    transform: rotate(15deg);
+    left: 55px;
+    top: -2px;
+}
+.text8 span:nth-child(5) { 
+    transform: rotate(35deg);
+    left: 80px;
+    top: 3px;
+}
+
+
+
+
 .text9 {
     font-size: 20px;
     top: 58px;
-    left: 300px;
+    left: 49px;
+    color: #FF8BF5
 }
 
 
@@ -119,7 +165,7 @@
 #types{
     position:absolute;
     z-index:1;
-    top:155px;
+    top:130px;
     left:525px;
     width: 100px; 
     height: 100%; 
@@ -146,6 +192,32 @@
     color: #f6ffa6; 
 }
 
+.text1 span {
+    position: absolute;
+    transform-origin: bottom center;
+}
+
+.text1 span:nth-child(1) { 
+    left: 0px;
+}
+.text1 span:nth-child(2) { 
+    left: 20px;
+}
+.text1 span:nth-child(3) { 
+    transform: rotate(-5deg);
+    left: 45px;
+    top: -5px;
+}
+.text1 span:nth-child(4) { 
+    transform: rotate(40deg);
+    left: 60px;
+    top: -2px;
+}
+.text1 span:nth-child(5) { 
+    transform: rotate(60deg);
+    left: 80px;
+    top: 15px;
+}
 
 
 
@@ -198,10 +270,16 @@
 #jinxed{
     font-size: 30px;
     margin:15px;
+    margin-bottom:30px;
 }
 #dozen{
     font-size: 30px;
     margin: 15px;
     margin-left:15%;
+}
+/* Make highlighted words bold */
+.highlight {
+    font-weight: bold;
+    font-size:40px;
 }
 
