--- a/css/display.css
+++ b/css/display.css
@@ -3,7 +3,7 @@
     top: -200;
     left: 200px; 
     margin: 0px;
-    color: #FFD700; /* Soft Yellow */
+    color: #ceb005; /* Soft Yellow */
     font-family: 'customIt';
 }
 @font-face {
